--- a/about.html
+++ b/about.html
@@ -218,8 +218,7 @@
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
-                    <h2 class = "call__heading">Have a Project to
-                        Discuss?</h2>
+                    <h2 class = "call__heading">Want a free consultation?</h2>
                     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, laborum eum debitis
                         minus!
                     </h4>
