--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
 
         <div class="second-wrapper container ">
 
-            <p class="huge text-shadow">Say hello to the <br> next generation of <br> website <span
+            <p class="huge text-shadow">Welcome to the <br> next generation of <br> website <span
                     class="auto-type"></span>
             </p>
-            <h4 class="second__content light text-shadow">Consequatur ut qui. Cupiditate natus dolores sit. Nesciunt
-                aperiam rerum veniam explicabo ut.
-                Modi illo voluptates debitis magnam placeat. Delectus rerum recusandae ut aut veritatis.</h4>
+            <h4 class="second__content light text-shadow">We believe websites are the most powerful online marketing tool. Through UX and marketing strategies, we engineer websites that drive sales and increase your online presence. Let us create the best you.</h4>
 
             <a href="./about.html" class="btn-gradient hvr-grow shadow">
                 <div class="btn__text">
@@ -143,132 +141,80 @@
     <div class="background-change">
 
 
-    <h3 class="intro container" id = "six-services"> <span class="gradient">Six Figure</span> Services</h3>
+    <h3 class="intro container" id = "six-services"> <span class="gradient">Six Figure</span> Roadmap</h3>
 
     <section class="fourth">
-        <div class="fourth__grid container">
-            <div class="services__list">
-                <div class="service" data-aos="fade-up">
-                    <div class="service__icon">
-                        <img src="bucket.png" alt="">
-                    </div>
-                    <div class="service__heading">
-                        <h4 class="gradient">Branding</h4>
-                    </div>
-                    <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipisci
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
-                        </h5>
-                    </div>
-                </div>
-                <div class="service" data-aos="fade-up">
-                    <div class="service__icon">
-                        <img src="picture.png" alt="">
-                    </div>
-                    <div class="service__heading">
-                        <h4 class="gradient">Web Design</h4>
-                    </div>
-                    <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipici
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
-                        </h5>
-                    </div>
-                </div>
-                <div class="service" data-aos="fade-up">
-                    <div class="service__icon">
-                        <img src="rocket.png" alt="">
-                    </div>
-                    <div class="service__heading">
-                        <h4 class="gradient">Web Development</h4>
-                    </div>
-                    <div class="service__content">
-                        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut porro, accusantium
-                            adipisci
-                            quidem libero obcaecati consequuntur tempora voluptatem architecto cumque dolores quae
-                        </h5>
-                    </div>
-                                    <a href="./services.html" class="btn-gradient" id="learn-more-service">
-                    <div class="btn__text">
-                        <h5>Learn</h5>
-                    </div>
-                    <h5> More </h5>
-                    <img class="btn__icon" src="rightArrow.svg" alt="">
-                </a>
-                </div>
-            </div>
 
-            <div class="fourth__content" data-aos="fade-up">
-                <h5 id="services-content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
-                    facilis consequuntur natus,
-                    repellendus expedita pariatur molestiae voluptas quis impedit dolore voluptatum ipsam odit
-                    officiis
-                    alias quod nobis quas, ut doloremque.
-                    Quos itaque sunt quas quibusdam pariatur nisi dolorum ipsa, reprehenderit iure doloremque nihil
-                    cumque,
-                    architecto quaerat ratione totam delectus quo, facilis inventore! Similique, nulla perferendis?
-                    Laudantium quae possimus consequuntur impedit.
-                    Cum harum ipsam pariatur quos quidem ea modi eos alias debitis non sit culpa dolore laudantium,
-                    saepe
-                    voluptatum quas reprehenderit! Ad facere esse nostrum perferendis, nam sapiente sed aliquam
-                    numquam.
-                    Exercitationem possimus natus dolores debitis dicta earum blanditiis totam doloremque nisi nobis
-                    qui
-                    voluptatum voluptate numquam et optio distinctio, voluptas beatae mollitia deleniti dolor facere
-                    maxime
-                    neque reiciendis quas. Magnam.
-                    Corrupti a, atque fugiat consequatur tempore blanditiis debitis, saepe quis nulla quam
-                    necessitatibus
-                    autem, quod sunt dolorum suscipit nemo illum ducimus impedit? Sed, dolore! Asperiores nemo
-                    consequatur
-                    aperiam quo sint. <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
-                    facilis
-                    consequuntur natus,
-                    repellendus expedita pariatur molestiae voluptas quis impedit dolore voluptatum ipsam odit
-                    officiis
-                    alias quod nobis quas, ut doloremque.
-                    Quos itaque sunt quas quibusdam pariatur nisi dolorum ipsa, reprehenderit iure doloremque nihil
-                    cumque,
-                    architecto quaerat ratione totam delectus quo, facilis inventore! Similique, nulla perferendis?
-                    Laudantium quae possimus consequuntur impedit.
-                    Cum harum ipsam pariatur quos quidem ea modi eos alias debitis non sit culpa dolore laudantium,
-                    saepe
-                    voluptatum quas reprehenderit! Ad facere esse nostrum perferendis, nam sapiente sed aliquam
-                    numquam.
-                    Exercitationem possimus natus dolores debitis dicta earum blanditiis totam doloremque nisi nobis
-                    qui
-                    voluptatum voluptate numquam et optio distinctio, voluptas beatae mollitia deleniti dolor facere
-                    maxime
-                    neque reiciendis quas. Magnam.
-                    Corrupti a, atque fugiat consequatur tempore blanditiis debitis, saepe quis nulla quam
-                    necessitatibus
-                    autem, quod sunt dolorum suscipit nemo illum ducimus impedit? Sed, dolore! Asperiores nemo
-                    consequatur
-                    aperiam quo sint. <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
-                    facilis
-                    consequuntur natus,
-                    repellendus expedita pariatur molestiae voluptas quis impedit dolore voluptatum ipsam odit
-                    officiis
-                    alias quod nobis quas, ut doloremque.
-                    Quos itaque sunt quas quibusdam pariatur nisi dolorum ipsa, reprehenderit iure doloremque nihil
-                    cumque,
-                    architecto quaerat ratione totam delectus quo, facilis inventore! Similique, nulla perferendis?
-                    Laudantium quae possimus consequuntur impedit.
-                    Cum harum ipsam pariatur quos quidem ea modi eos alias debitis non sit culpa dolore laudantium,
-                    saepe
-                    voluptatum quas reprehenderit! Ad facere esse nostrum perferendis, nam sapiente sed aliquam
-                    numquam.
-                    Exercitationem possimus natus dolores debitis dicta earum blanditiis totam doloremque nisi nobis
-                    qui
-                    voluptatum voluptate numquam et optio distinctio, voluptas beatae mollitia deleniti dolor facere
-                    maxime
-                    neque reiciendis quas. Magnam.
-                    Corrupti a, atque fugiat consequatur tempore blanditiis debitis, saepe quis nulla quam
-                    necessitatibus
-                    autem, quod sunt dolorum suscipit nemo illum ducimus impedit? Sed, dolore! Asperiores nemo
-                    consequatur
-                    aperiam quo sint.</h5>
+            <div class="fourth__content container">
+                <div class ="timeline">
+                    <div class="timeline__component component__mobile">
+                        <div class="timeline__date timeline__date--right"><h5>Phase 1</h5></div>
+                    </div>
+                    <div class="timeline__middle component__mobile">
+                        <div class="timeline__point"></div>
+                    </div>
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-down">
+                        <h3 class="timeline__title">UX Research</h3>
+                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                    </div>
+
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-right">
+                        <h3 class="timeline__title">Wireframe Prototype</h3>
+                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                    </div>
+                    <div class="timeline__middle component__mobile">
+                        <div class="timeline__point"></div>
+                    </div>
+                    <div class="timeline__component component__mobile">
+                        <div class="timeline__date"><h5>Phase 2</h5></div>
+                    </div>
+
+                    <div class="timeline__component component__mobile">
+                        <div class="timeline__date timeline__date--right"><h5>Phase 3</h5></div>
+                    </div>
+                    <div class="timeline__middle component__mobile">
+                        <div class="timeline__point"></div>
+                    </div>
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-down">
+                        <h3 class="timeline__title">Client Approval</h3>
+                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                    </div>
+
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-right">
+                        <h3 class="timeline__title">Development</h3>
+                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                    </div>
+                    <div class="timeline__middle component__mobile">
+                        <div class="timeline__point"></div>
+                    </div>
+                    <div class="timeline__component component__mobile">
+                        <div class="timeline__date"><h5>Phase 4</h5></div>
+                    </div>
+
+                    <div class="timeline__component component__mobile">
+                        <div class="timeline__date timeline__date--right"><h5>Phase 5</h5></div>
+                    </div>
+                    <div class="timeline__middle component__mobile">
+                        <div class="timeline__point"></div>
+                    </div>
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-down">
+                        <h3 class="timeline__title">Launch</h3>
+                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                    </div>
+
+                    <div class="timeline__component final__component timeline__component--bottom timeline__component--bg shadow" data-aos="fade-right">
+                        <h3 class="timeline__title">Maintenance</h3>
+                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                    </div>
+                    <div class="timeline__middle component__mobile">
+                        <div class="timeline__point"></div>
+                        <div class="timeline__point timeline__point--bottom"></div>
+                    </div>
+                    <div class="timeline__component component__mobile">
+                        <div class="timeline__date"><h5>Phase 6</h5></div>
+                    </div>
+
+                </div>
                 <a href="./services.html" class="btn-gradient" id="learn-more">
                     <div class="btn__text">
                         <h5 href="#">Learn</h5>
@@ -277,7 +223,6 @@
                     <img class="btn__icon" src="rightArrow.svg" alt="">
                 </a>
             </div>
-        </div>
     </section>
 
     <h3 class="intro container"> <span class="gradient">Six Figure</span> Questions</h3>
@@ -288,7 +233,7 @@
 
             <div class="accordion__item shadow">
                 <div class="accordion__item__header">
-                    <h4>How long does development take?</h4>
+                    <h4>How long does a website take to create?</h4>
                     <div class="accordion__icon">
                         <img src="chevron.svg" alt="">
                     </div>
@@ -308,7 +253,7 @@
             </div>
             <div class="accordion__item shadow">
                 <div class="accordion__item__header">
-                    <h4>How long does development take?</h4>
+                    <h4>How will I add future content?</h4>
                     <div class="accordion__icon">
                         <img src="chevron.svg" alt="">
                     </div>
@@ -328,7 +273,7 @@
             </div>
             <div class="accordion__item shadow">
                 <div class="accordion__item__header">
-                    <h4>How long does development take?</h4>
+                    <h4>Why use Six Figure Labs over a no code solution</h4>
                     <div class="accordion__icon">
                         <img src="chevron.svg" alt="">
                     </div>
@@ -348,7 +293,7 @@
             </div>
             <div class="accordion__item shadow">
                 <div class="accordion__item__header">
-                    <h4>How long does development take?</h4>
+                    <h4>How will a custom design benefit me?</h4>
                     <div class="accordion__icon">
                         <img src="chevron.svg" alt="">
                     </div>
@@ -368,7 +313,7 @@
             </div>
             <div class="accordion__item shadow">
                 <div class="accordion__item__header">
-                    <h4>How long does development take?</h4>
+                    <h4>How much does a website cost?</h4>
                     <div class="accordion__icon">
                         <img src="chevron.svg" alt="">
                     </div>
@@ -388,7 +333,7 @@
             </div>
             <div class="accordion__item shadow">
                 <div class="accordion__item__header">
-                    <h4>How long does development take?</h4>
+                    <h4>Do I need to provide all the content?</h4>
                     <div class="accordion__icon">
                         <img src="chevron.svg" alt="">
                     </div>
@@ -418,8 +363,7 @@
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
-                    <h2 class = "call__heading">Have a Project to
-                        Discuss?</h2>
+                    <h2 class = "call__heading">Want a free consultation?</h2>
                     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, laborum eum debitis
                         minus!
                     </h4>
@@ -508,7 +452,7 @@
       </script>
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ['design', 'interface', 'optimization', 'technology'],
+            strings: ['design', 'interface', 'marketing', 'technology'],
             typeSpeed: 50,
             backSpeed: 50,
             showCursor: false,
