--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
                     <div class="timeline__middle component__mobile">
                         <div class="timeline__point"></div>
                     </div>
-                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-down">
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="flip-left">
                         <h3 class="timeline__title">UX Research</h3>
-                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                        <h5 class="timeline__paragraph"> In order for your website to get as much engagement as possible, our team studies, disects, and analyzes your business. We create a gameplan, and a whole boatload of notes. Our specialists strategically pick the best elements and content, and send everything to the designers.</h5>
                     </div>
 
                     <div class="timeline__component timeline__component--bg shadow" data-aos="fade-right">
                         <h3 class="timeline__title">Wireframe Prototype</h3>
-                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                        <h5 class="timeline__paragraph">We use all the data from the UX findings to mockup your site, each page is designed to meet the needs of the client. We start by creating a color scheme, choosing typography, and collecting all content. We remain in close contact with the client every step of the way, no page is finished until we receive approval from the client.</h5>
                     </div>
                     <div class="timeline__middle component__mobile">
                         <div class="timeline__point"></div>
@@ -175,14 +175,14 @@
                     <div class="timeline__middle component__mobile">
                         <div class="timeline__point"></div>
                     </div>
-                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-down">
-                        <h3 class="timeline__title">Client Approval</h3>
-                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="flip-left">
+                        <h3 class="timeline__title">Development</h3>
+                        <h5 class="timeline__paragraph">Our development team converts every page design to a responsive and fast website, creating an identical copy of the mockup. Our tech stack includes HTML, CSS, Javascript, React, and much more. Every project is thoroughly tested on a variety of devices for bugs before launch.</h5>
                     </div>
 
                     <div class="timeline__component timeline__component--bg shadow" data-aos="fade-right">
-                        <h3 class="timeline__title">Development</h3>
-                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
+                        <h3 class="timeline__title">Launch</h3>
+                        <h5 class="timeline__paragraph"> Once the site is cleared of all bugs, we archive the code in our database and host it. All domain configurations and backend solutions are finalized.</h5>
                     </div>
                     <div class="timeline__middle component__mobile">
                         <div class="timeline__point"></div>
@@ -196,22 +196,11 @@
                     </div>
                     <div class="timeline__middle component__mobile">
                         <div class="timeline__point"></div>
-                    </div>
-                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-down">
-                        <h3 class="timeline__title">Launch</h3>
-                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
-                    </div>
-
-                    <div class="timeline__component final__component timeline__component--bottom timeline__component--bg shadow" data-aos="fade-right">
-                        <h3 class="timeline__title">Maintenance</h3>
-                        <h5 class="timeline__paragraph"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque quam tenetur laboriosam expedita facilis saepe voluptas aut officia. Vitae exercitationem itaque est provident vero laborum, aperiam voluptates maiores eius dicta animi</h5>
-                    </div>
-                    <div class="timeline__middle component__mobile">
-                        <div class="timeline__point"></div>
                         <div class="timeline__point timeline__point--bottom"></div>
                     </div>
-                    <div class="timeline__component component__mobile">
-                        <div class="timeline__date"><h5>Phase 6</h5></div>
+                    <div class="timeline__component final__component timeline__component--bottom timeline__component--bg shadow" data-aos="flip-left">
+                        <h3 class="timeline__title">Maintenance</h3>
+                        <h5 class="timeline__paragraph">Our goal is to make our sites as easy to maintain as possible. We handle all the maintenance, from hosting to adding content, for only a small monthly fee.</h5>
                     </div>
 
                 </div>
@@ -364,8 +353,7 @@
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_cc" value="tyler@sixfigurelabs.com">
                     <h2 class = "call__heading">Want a free consultation?</h2>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, laborum eum debitis
-                        minus!
+                    <h4>We’d love to get a feel for your business and answer any questions, let’s get to work!
                     </h4>
                     <div class="email-container">
                     <input type="email" name="Email" id="email-call" placeholder="Email">
