--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="service" data-aos="fade-up">
+                <div class="service" data-aos="fade-right">
                     <div class="service__icon">
                         <img src="picture.png" alt="">
                     </div>
@@ -118,7 +118,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="service" data-aos="fade-up">
+                <div class="service" data-aos="fade-down">
                     <div class="service__icon">
                         <img src="magnify.png" alt="">
                     </div>
@@ -132,7 +132,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="service" data-aos="fade-up">
+                <div class="service" data-aos="fade-right">
                     <div class="service__icon">
                         <img src="gear.png" alt="">
                     </div>
@@ -146,7 +146,7 @@
                         </h5>
                     </div>
                 </div>
-                <div class="service" data-aos="fade-up">
+                <div class="service" data-aos="fade-down">
                     <div class="service__icon">
                         <img src="chart.png" alt="">
                     </div>
