--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
 
         </div>
 
-        <div class="founder" data-aos="fade-up">
+        <div class="founder" data-aos="fade-right">
 
             <div class="founder__info">
                 <h3 id="founder__first-name">Tyler Mox</h3>
