--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div class="call__card container shadow">
             <div class="call__left">
                 <form class="call__left" action="https://formsubmit.co/ad3c79132844b0215ab41892bc07e55a" method ="POST" novalidate>
-                    <input type="hidden" name="_next" value = "http://127.0.0.1:5500/thanks.html">
+                    <input type="hidden" name="_next" value = "https://dashing-platypus-c93d7d.netlify.app/index.html">
                     <input type="hidden" name="_subject" value="New lead!">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="box">
