--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <meta property="og:title" content="Six Figure Labs: Web Development & Web Design" />
     <meta property="og:description" content="Gain more business traction with a little help from Six Figure Labs"/>
     <meta property="og:image" content="openGraphBg.png" />
-    <link rel="stylesheet" href="dist/magic-mouse.css" />
-    <link rel="stylesheet" href="https://res.cloudinary.com/veseylab/raw/upload/v1597754760/magicmouse/magic-mouse-1.0.css" />
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/png" href="SixFavicon.png" />
     <script src="main.js" defer></script>
@@ -21,17 +19,16 @@
     <link
   rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-  <script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1597754761/magicmouse/magic_mouse-1.0.js"></script>
 </head>
 
 <body>
 
     <section class="header">
         <div class="group">
-        <div class="nav container">
+        <div class="nav desktop-nav container">
             <div class="nav__left">
                 <a href = "index.html" class="nav__logo">
-                    <img id = "logo" src="" alt="">
+                    <img id = "logo" src="6FLMainLogo.svg" alt="">
                 </a>
                 <ul class="nav__items">
                     <li><a id="home" class = "magic-hover" href="./index.html">Home</a></li>
@@ -67,7 +64,9 @@
     </div>
     </section>
 
-
+    <img class = "circle" id = "yellow" src="YellowCircle.svg" alt="" data-aos="fade-down">
+    <img class = "circle" id = "red" src="RedCircle.svg" alt="" data-aos="fade-down">
+    <img class = "circle" id = "purple" src="PurpleCircle.svg" alt="" data-aos="fade-up-right">
 
     <section class="second" data-aos="fade-right">
 
@@ -462,19 +461,6 @@
         });
     </script>
 
-<script type="text/javascript" src="dist/magic_mouse.js"></script>
-
-<script type="text/javascript">
-    options = {
-	"cursorOuter": "circle-basic",
-	"hoverEffect": "pointer-overlay",
-	"hoverItemMove": false,
-	"defaultCursor": false,
-	"outerWidth": 50,
-	"outerHeight": 50
-      };
-    magicMouse(options);
-</script>
 
 </body>
 
