--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
         <div class="nav container">
             <div class="nav__left">
                 <a href = "index.html" class="nav__logo">
-                    <img id = "logo" src="" alt="">
+                    <img id = "logo" src="6FLMainLogo.svg" alt="">
                 </a>
                 <ul class="nav__items">
                     <li><a id="home" href="./index.html">Home</a></li>
@@ -64,7 +64,7 @@
     </div>
     </section>
 
-    <section class="services__second" data-aos="fade-right">
+    <section class="services__second second--top" data-aos="fade-right">
 
         <div class="services__second__wrapper container">
 
