--- a/our-work.html
+++ b/our-work.html
@@ -30,7 +30,7 @@
         <div class="nav container">
             <div class="nav__left">
                 <a href = "index.html" class="nav__logo">
-                    <img id = "logo" src="" alt="">
+                    <img id = "logo" src="6FLMainLogo.svg" alt="">
                 </a>
                 <ul class="nav__items">
                     <li><a id="home" href="./index.html">Home</a></li>
