--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="timeline__middle component__mobile">
                         <div class="timeline__point"></div>
                     </div>
-                    <div class="timeline__component timeline__component--bg shadow" data-aos="flip-left">
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-right">
                         <h3 class="timeline__title">UX Research</h3>
                         <h5 class="timeline__paragraph"> In order for your website to get as much engagement as possible, our team studies, disects, and analyzes your business. We create a gameplan, and a whole boatload of notes. Our specialists strategically pick the best elements and content, and send everything to the designers.</h5>
                     </div>
@@ -177,7 +177,7 @@
                     <div class="timeline__middle component__mobile">
                         <div class="timeline__point"></div>
                     </div>
-                    <div class="timeline__component timeline__component--bg shadow" data-aos="flip-left">
+                    <div class="timeline__component timeline__component--bg shadow" data-aos="fade-right">
                         <h3 class="timeline__title">Development</h3>
                         <h5 class="timeline__paragraph">Our development team converts every page design to a responsive and fast website, creating an identical copy of the mockup. Our tech stack includes HTML, CSS, Javascript, React, and much more. Every project is thoroughly tested on a variety of devices for bugs before launch.</h5>
                     </div>
@@ -200,7 +200,7 @@
                         <div class="timeline__point"></div>
                         <div class="timeline__point timeline__point--bottom"></div>
                     </div>
-                    <div class="timeline__component final__component timeline__component--bottom timeline__component--bg shadow" data-aos="flip-left">
+                    <div class="timeline__component final__component timeline__component--bottom timeline__component--bg shadow" data-aos="fade-right">
                         <h3 class="timeline__title">Maintenance</h3>
                         <h5 class="timeline__paragraph">Our goal is to make our sites as easy to maintain as possible. We handle all the maintenance, from hosting to adding content, for only a small monthly fee.</h5>
                     </div>
