--- a/about.html
+++ b/about.html
@@ -177,9 +177,7 @@
 
             </div>
             <div class="founder__paragraph light">
-                <h4 class ="light"><span class="gradient founder-quote">“</span>Owl sweaters inside her luggage, you gotta love it.
-                    Damn, this shit could go on a tape,
-                    bitches lovin' my drive, I never give it a break.<span class="gradient founder-quote">”</span></h4>
+                <h4 class ="light"><span class="gradient founder-quote">“</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, illum, culpa minima sapiente maxime eos aspernatur soluta quidem aperiam perferendis veniam vero neque nobis aliquid!<span class="gradient founder-quote">”</span></h4>
             </div>
 
 
@@ -197,9 +195,7 @@
 
             </div>
             <div class="founder__paragraph light">
-                <h4 class ="light"><span class="gradient founder-quote">“</span>Give these ****** the look, the verse, and even the hook.
-                    That's why every song sound like Drake featurin' Drake,
-                    Straight, Y pree? Why is it always me?<span class="gradient founder-quote">”</span></h4>
+                <h4 class ="light"><span class="gradient founder-quote">“</span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium perferendis modi dolorum asperiores, eaque amet unde nostrum et quidem deserunt ipsum minima beatae pariatur. Provident.<span class="gradient founder-quote">”</span></h4>
             </div>
     </div>
 
